--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> :) </title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   
+    <h1>Ти верно си педал</h1>
+    <h2>Оше по голем педал</h2>
+    <button>
+        <a href="https://youtu.be/_AZDaW3GLQw"> 
+            1 pedalski buton
+        </a>
 
-    Ti si gei
+    </button>
+    
+
 
 </body>
-
 </html>
